--- a/chamber/index.html
+++ b/chamber/index.html
@@ -112,7 +112,7 @@
             </div>
           </div>
           <div class="forecast" id="forecast">
-            <noscript><div>Weather information is unavailable without JavaScript.</div></noscript>
+            <noscript>Weather information is unavailable without JavaScript.</noscript>
           </div>
         </div>
         <button id="refreshWeatherBtn" type="button">Refresh Weather</button>
@@ -123,7 +123,7 @@
     <section aria-labelledby="spotlights-title">
       <h2 id="spotlights-title">Member Spotlights</h2>
       <div class="spotlights" id="spotlights">
-        <noscript><p>Spotlights are unavailable without JavaScript.</p></noscript>
+        <noscript>Spotlights are unavailable without JavaScript.</noscript>
       </div>
       <button id="refreshSpotlightsBtn" type="button">Show Other Spotlights</button>
     </section>
