--- a/chamber/home.html
+++ b/chamber/home.html
@@ -67,7 +67,7 @@
 
   <!-- Scripts -->
   <script src="scripts/weather.js" defer></script>
-  <script src="scripts/spotlight.js" defer></script>
+  <script src="scripts/scripts.js" defer></script>
   <script>
     // Set current year in footer
     document.getElementById("year").textContent = new Date().getFullYear();
