--- a/chamber/index.html
+++ b/chamber/index.html
@@ -183,6 +183,6 @@
     </div>
   </footer>
 
-  <script src="scripts.js" defer></script>
+  <script src="scripts/scripts.js" defer></script>
 </body>
 </html>
