--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -43,7 +43,7 @@
       <footer class="footer">
         <div class="business-cards">
           <div class="business-card">
-            <img src="images/ivan.jpg" alt="Ssemanda Andrew Allan">
+            <img src="images/ssemanda.jpg" alt="Ssemanda Andrew Allan">
             <div class="card-info">
               <p class="name">Ssemanda Andrew Allan</p>
               <p class="position">CEO</p>
@@ -53,8 +53,7 @@
           <div class="business-card">
             <img src="images/shamie.jpg" alt="Shamila Bay">
             <div class="card-info">
-              <p class="name">Shamila 
-              </p>
+              <p class="name">Shamila Bay</p>
               <p class="position">Director</p>
               <p class="company">Kabale Chamber of Commerce</p>
             </div>
