--- a/chamber/index.html
+++ b/chamber/index.html
@@ -7,7 +7,7 @@
   <meta name="author" content="Kabale Chamber Web Team" />
   <title>Kabale Chamber of Commerce | Home</title>
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
   <header>
@@ -339,7 +339,7 @@
     document.getElementById('refreshSpotlightsBtn').addEventListener('click', renderSpotlights);
 
     // --- Weather ---
-    const apiKey = 'YOUR_OPENWEATHERMAP_API_KEY';
+    const apiKey = '6e423f759a655f148ba2121955d68c13';
     const kabaleLat = -1.2486;
     const kabaleLon = 29.9897;
     function fetchWeather() {
