--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -14,8 +14,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Arima:wght@100..700&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:ital,wght@0,400;0,700;1,500&display=swap" rel="stylesheet">
     <link rel="icon" href="images/favicon.ico">
-    <link rel="stylesheet" href="styles/index.css">
-    <link rel="stylesheet" href="styles/discover.css">
+    <link rel="stylesheet" href="css/index_small.css">
+    <link rel="stylesheet" href="css/index_small.css">
     <script src="scripts/discover.js" defer></script>
     <title>Kabale Chamber of Commerce</title>
 </head>
