--- a/chamber/siteplan.html
+++ b/chamber/siteplan.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site Plan - Eco Green</title>
-    <link rel="stylesheet" href="styles/siteplan.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <h1>Site Plan: Eco Green</h1>
