--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -37,7 +37,7 @@
   </header>
   
   <main>
-    <h1>Kampala City Business Chamber</h1> <!-- This must be the first element in <main> -->
+    <h1>Kabale Business Chamber</h1> <!-- This must be the first element in <main> -->
 
     <section class="visitor-message">
         <p id="visitMessage">Loading...</p>
