--- a/chamber/index.html
+++ b/chamber/index.html
@@ -8,6 +8,14 @@
   <title>Kabale Chamber of Commerce | Home</title>
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
   <link rel="stylesheet" href="css/styles.css" />
+  <style>
+    body {
+      background-image: url('images/home-bg.jpg');
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+    }
+  </style>
 </head>
 <body>
   <header>
